add: some element

--- a/assets/styles/abstracts/_variables.scss
+++ b/assets/styles/abstracts/_variables.scss
@@ -7,3 +7,5 @@ $font-weight-bold: 700;
 $color-anitque-gold:#C1A15A;
 $color-slate-grey: #5A5A5A;
 $color-aged-cream: #F1E0C6;
+
+$color-overlay: rgba(0, 0, 0, 0.5);
