--- a/assets/styles/base/_base.scss
+++ b/assets/styles/base/_base.scss
@@ -33,3 +33,21 @@ ul {
 a {
     text-decoration: none;
 }
+
+#loader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(83, 79, 79, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+}
+
+.lottie-container {
+    width: 150px;
+    height: 150px;
+}
