--- a/assets/styles/components/_button.scss
+++ b/assets/styles/components/_button.scss
@@ -1,13 +1,22 @@
 @use "../abstracts/variables" as variable;
 
+@mixin button-style($bg-color, $text-color) {
+  padding: 0.5rem 1rem;
+  background-color: $bg-color;
+  color: $text-color;
+  border-radius: 1rem;
+  border: none;
+  transition: all 0.2s ease-out;
+}
+
 .nav-btn {
-    color: variable.$color-anitque-gold;
-    padding: 0.5rem 1rem;
+    @include button-style(transparent, variable.$color-anitque-gold);
     border: 2px solid variable.$color-anitque-gold;
-    border-radius: 1rem;
-    transition: background-color 0.2s ease-out;
+    border-top: none;
+    border-top-right-radius: 0;
+    border-top-left-radius: 0;
 }
 
 .nav-btn:hover {
-    background-color: variable.$color-aged-cream;
+    background-color: variable.$color-slate-grey;
 }
