--- a/assets/styles/layout/_header.scss
+++ b/assets/styles/layout/_header.scss
@@ -33,8 +33,15 @@
 };
 
 #header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
+
+    width: 100%;
     display: flex;
     justify-content: center;
+
     .header {
         width: 100%;
         display: flex;
@@ -42,7 +49,7 @@
         align-items: center;
 
         padding: 3px 0;
-        background-color: variable.$color-slate-grey;
+        background-color: transparent;
 
         .logo-container {
             width: 7%;
@@ -54,6 +61,7 @@
             display: flex;
             justify-content: space-between;
             gap: 3rem;
+            margin-top: -7rem;
 
             .left-list {
                 display: flex;
