add: some element

--- a/assets/styles/abstracts/_variables.scss
+++ b/assets/styles/abstracts/_variables.scss
@@ -8,4 +8,11 @@ $color-anitque-gold:#C1A15A;
 $color-slate-grey: #5A5A5A;
 $color-aged-cream: #F1E0C6;
 
+$color-bg: #f4f4f4;
+$color-text: #222;
+$color-accent: #111;
+$color-light: #fff;
+$color-grey: #ccc;
+$color-muted: #555;
+
 $color-overlay: rgba(0, 0, 0, 0.5);
