--- a/assets/styles/pages/_home.scss
+++ b/assets/styles/pages/_home.scss
@@ -15,6 +15,7 @@ main {
         align-items: center;
         width: 100%;
         margin-top: 0;
+        margin-bottom: 4rem;
 
         .hero {
             position: relative;
@@ -35,14 +36,17 @@ main {
                 width: 100%;
                 height: 45vh;
                 background: variable.$color-overlay;
-                z-index: 0;
+                z-index: 1;
             }
 
             .hero-content {
                 @include center();
                 text-align: center;
+                h1 {
+                    color: inherit;
+                }
                 color: variable.$color-aged-cream;
-                z-index: 1;
+                z-index: 2;
             }
         }
 
@@ -64,9 +68,14 @@ main {
                 gap: 1rem;
 
                 padding: 1rem;
-                background-color: #f4f4f4;
+                border: 2px solid variable.$color-anitque-gold;
+                border-left: none;
+                border-right: none;
                 border-radius: 1rem;
-                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+                box-shadow: 
+                    0 -10px 10px -10px rgba(0, 0, 0, 0.3),
+                    0 10px 10px -10px rgba(0, 0, 0, 0.3)
+                ;
                 transition: transform 0.3s ease;
 
                 a {
@@ -77,8 +86,22 @@ main {
                     gap: 1rem;
 
                     .card-title {
-                        
+                        position: relative;
+                        padding: 0 1rem;
+                        border-bottom: 2px solid variable.$color-slate-grey;
+                        border-radius: 10px;
                     }
+                    .card-title::after {
+                        content: " ";
+                        position: absolute;
+                        left: 50%;
+                        bottom: -1px;
+                        width: 140%;
+                        height: 2px;
+                        border-bottom: 2px solid variable.$color-slate-grey;
+                        transform: translateX(-50%);
+                    }
+
                     .card-content {
                         flex: 1;
                         display: flex;
@@ -88,9 +111,33 @@ main {
                         gap: 1rem;
 
                         .card-img-container {
+                            min-width: 260px;
                             width: 100%;
+                            overflow: hidden;
                             height: 200px;
                             overflow: hidden;
+                            border-left: 3px solid;
+                            border-right: 3px solid;
+                            border-radius: 1rem;
+                            border-color: variable.$color-anitque-gold;
+                        }
+
+                        .card-type {
+                            display: flex;
+                            flex-direction: column;
+                            justify-content: space-between;
+                            align-items: center;
+                            gap: 1rem;
+
+                            .first-type {
+                                color: variable.$color-anitque-gold;
+                                border-bottom: 2px solid variable.$color-anitque-gold;
+                            }
+                            .subing-type {
+                                padding: 0 1rem;
+                                border-radius: 10px;
+                                border-bottom: 2px solid variable.$color-slate-grey;
+                            }
                         }
                     }
                 }
@@ -131,7 +178,7 @@ main {
                                 
 
                             .card-img-container {
-                                    
+                                min-width: 340px;
                             }
                         }
                     }
@@ -155,12 +202,45 @@ main {
     }
 }
 
-@media screen and (max-width:768px) {  
+@media screen and (max-width:768px) {
     main {
         #home {
+            .hero {
+                height: 65vh;
+
+                #background-video {
+                    height: 65vh;
+                }
+
+                .overlay {
+                    height: 65vh;
+                }
+
+                .hero-content {
+                    width: 95%;
+                }
+            }
             .cards-container {
+                width: 100%;
                 .card {
                     width: 100%;
+
+                    a {
+                        .card-title {
+                            
+                        }
+                        .card-content {
+                                
+
+                            .card-img-container {
+                                
+                            }
+
+                            .card-type {
+                                
+                            }
+                        }
+                    }
                 }
             }
         }
