--- a/templates/security/createUpdateUser.html.twig
+++ b/templates/security/createUpdateUser.html.twig
@@ -3,10 +3,12 @@
 {% block title %}{{ userUpdateForm ? 'Modification du compte' :  'Creation de compte' }}{% endblock %}
 
 {% block body %}
+    <section class="security">
         <h1> {{ userUpdateForm ? 'Modifier vos informations' :  'Ajouter vos informations' }}</h1>
 
         {{form_start(userCreateForm)}}
             {{form_widget(userCreateForm)}}
             <input type="submit" value="{{ userUpdateForm ? 'Modifier' :  'Validez' }}">
         {{form_end(userCreateForm)}}
+    </section>
 {% endblock %}
