--- a/assets/styles/layout/_header.scss
+++ b/assets/styles/layout/_header.scss
@@ -87,6 +87,9 @@
                 transition: 0.3s ease;
             }
         }
+        .burger-container {
+            display: none;
+        }
         .burger-toggle:checked + .burger + .burger-container {
             display: flex;
         }
