--- a/assets/styles/components/_button.scss
+++ b/assets/styles/components/_button.scss
@@ -11,8 +11,15 @@
 
 .nav-btn {
     @include button-style(transparent, variable.$color-anitque-gold);
+    border: 2px solid variable.$color-anitque-gold;
 }
 
 .nav-btn:hover {
     background-color: variable.$color-slate-grey;
+}
+
+@media screen and (max-width:603px) {
+    .nav-btn {
+        padding: 0.5rem 0.5rem;
+    }
 }
