add: responsive and all clocks

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,7 +31,7 @@
                 </div>
                 <ul class="list-container">
                     <div class="left-list">
-                        <li><a class="nav-btn" href="{{ path('home')}}">Les Horloges</a></li>
+                        <li><a class="nav-btn" href="{{ path('clocks')}}">Les Horloges</a></li>
                         {% if is_granted('ROLE_ADMIN') %}
                             
                         {% else %}
