--- a/assets/styles/layout/_header.scss
+++ b/assets/styles/layout/_header.scss
@@ -10,10 +10,11 @@
     display: flex;
     justify-content: center;
 
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 1.2) 0%, rgba(0, 0, 0, 1) 80%, transparent);
+
     .header {
         width: 100%;
         max-height: 158px;
-        background-color: transparent;
 
         .logo-container {
             position: absolute;
@@ -93,6 +94,7 @@
     #header {
         min-height: 8vh;
         .header {
+            background: rgba(0, 0, 0, 0.8);
             .logo-container {
                 max-width: 144px;
                 max-height: 144px;
