--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -40,7 +40,7 @@
                     </a>
                     <div class="card-option">
                         {% if app.user and app.user.id == clock.user.id %}
-                            <a class="button" href="{{ path('update_clock',{'id' : clock.id}) }}">Modifier</a>
+                            <a href="{{ path('update_clock',{'id' : clock.id}) }}"><button class="btn btn-lg btn-primary">Modifier</button></a>
                             <form method="POST" onsubmit="return confirm('Confirmer la suppression?')" action="{{ path('delete_clock', {'id': clock.id}) }}">
                                 <input type="hidden" name="_method" value="delete">
                                 <input type="hidden" name="_token" value="{{ csrf_token('SUP' ~ clock.id) }}">
@@ -51,7 +51,7 @@
                 </div>
             {% endfor %}
         </div>
-        <h3>{{ percent.result }}</h3>
-        <h3>{{ money.originalAmount ~ ' ' ~ money.fromCurrency ~ ' => ' ~ money.toCurrency ~ ' = ' ~ money.convertedAmount ~ ' (taux: ' ~ money.rateUsed ~ ')' }}</h3>
+        {# <h3>{{ percent.result }}</h3>
+        <h3>{{ money.originalAmount ~ ' ' ~ money.fromCurrency ~ ' => ' ~ money.toCurrency ~ ' = ' ~ money.convertedAmount ~ ' (taux: ' ~ money.rateUsed ~ ')' }}</h3> #}
     </section>
 {% endblock %}
