--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -1,1 +1,5 @@
 {% extends '@EasyAdmin/page/content.html.twig'%}
+
+{% block content %}
+    <a href="{{ path('home') }}"><button>Retour a l'accueil</button></a>
+{% endblock %}
