add: home and clocks

--- a/assets/styles/pages/_home.scss
+++ b/assets/styles/pages/_home.scss
@@ -61,6 +61,7 @@ main {
 
             .card {
                 width: 45%;
+                min-height: 600px;
                 display: flex;
                 flex-direction: column;
                 justify-content: space-between;
