--- a/templates/clocks/clock.html.twig
+++ b/templates/clocks/clock.html.twig
@@ -50,10 +50,24 @@
                         <p>{{ clock.price }} &#8364;</p>
                     </div>
                 {% endif %}
+
+                {% if clock.comments|length > 0 %}
+                    <ul>
+                        {% for comment in clock.comments %}
+                            <li>
+                                <strong>{{ comment.user.email }}</strong><br>
+                                <small>{{ comment.createAt|date('d/m/Y H:i') }}</small><br>
+                                {{ comment.comment }}
+                            </li>
+                        {% endfor %}
+                    </ul>
+                {% else %}
+                    <p>Aucun commentaire pour cette horloge.</p>
+                {% endif %}
             </div>
 
             <div class="card-option">
-                {% if app.user and app.user.id == clock.user.id %}
+                {% if app.user and app.user.id == clock.user.id or is_granted('ROLE_ADMIN') %}
                     <a href="{{ path('update_clock',{'id' : clock.id}) }}"><button class="btn btn-lg btn-primary">Modifier</button></a>
                         <form method="POST" onsubmit="return confirm('Confirmer la suppression?')" action="{{ path('delete_clock', {'id': clock.id}) }}">
                             <input type="hidden" name="_method" value="delete">
